# AnnaAgent

./: .gitignore  Makefile  README.md  README.zh-CN.md  api_server.py  backbone.py  complaint_chain.py  complaint_elicitor.py  counselor.py  emotion_modulator.py  emotion_pertuber.py  event_trigger.py  fill_scales.py  fixed_ms_patient.py  initialize.py  ms_patient.py  pyproject.toml  querier.py  requirements.txt  run.py  short_term_memory.py  style_analyzer.py
.github/workflows/: manual-publish.yml  pages.yml  publish.yml  python-publish.yml
.trae/documents/: 用 uv 重构并标准化项目（不设置镜像）.md
config/: __init__.py  defaults.py  init_content.py  initialize.py  load_config.py
config/models/: anna_engine_config.py
docs/: README.md  cli-reference.rst  conf.py  configuration.rst  data-memory.rst  deployment.rst  family_stress_case.json  index.rst  interactive_demo.yaml  publishing.rst  quickstart.rst  troubleshooting.rst
docs/_static/: custom.css  language-switch.js
docs/en/: agent-skills.rst  cli-reference.rst  configuration.rst  data-memory.rst  deployment.rst  index.rst  publishing.rst  quickstart.rst  troubleshooting.rst
docs/locale/zh_CN/LC_MESSAGES/: agent-skills.po  cli-reference.po  configuration.po  data-memory.po  deployment.po  index.po  publishing.po  quickstart.po  troubleshooting.po
docs/tools/: check_i18n.py
docs/zh/: cli-reference.rst  configuration.rst  data-memory.rst  deployment.rst  index.rst  publishing.rst  quickstart.rst  troubleshooting.rst
fronted/: README.md  index.html  main.tsx  package-lock.json  package.json  remixed-9512fbd7.tsx
parallax/: MULTI_MODEL_README.md  README_MULTI_LORA.md  TEST_RESULTS.md  client_example.py  start_multi_lora.py  start_multi_lora.sh  start_multi_models.py  start_multi_models.sh  test_local_lora.py
ref/: api_server_with_prompt.py
scales/: ghq-28.json
scripts/: check_pydantic.sh  lint_imports.sh
server/: complaint.sh  counselor.sh  emotion.sh
skills/: README.md
skills/annaagent-seeker-simulation/: SKILL.md
skills/annaagent-seeker-simulation/evals/: evals.json
skills/annaagent-seeker-simulation/references/: publishing.md
skills/patient-simulator/: SKILL.md
skills/patient-simulator/evals/: evals.json
skills/patient-simulator/references/: cli-workflow.md  publishing.md
src/anna_agent/: __init__.py  anna_agent_template.py  assets.py  backbone.py  case_data.py  cli.py  complaint_chain.py  complaint_elicitor.py  counselor.py  dataset_loader.py  diagnostics.py  emotion_modulator.py  emotion_pertuber.py  event_trigger.py  fill_scales.py  fixed_ms_patient.py  initialize.py  model_services.py  ms_patient.py  ms_patient_with_prompt.py  querier.py  runtime.py  service.py  short_term_memory.py  style_analyzer.py  workspace.py
src/anna_agent/common/: registry.py  tool_calls.py
src/anna_agent/config/: __init__.py  defaults.py  init_content.py  initialize.py  load_config.py
src/anna_agent/config/models/: anna_engine_config.py
src/anna_agent/datasets/: cbt-triggering-events.csv
src/anna_agent/figure/: readme.md
src/anna_agent/memory/: __init__.py  chunking.py  embeddings.py  models.py  store.py
src/anna_agent/scales/: __init__.py  bdi.json  sass.json
src/anna_agent/server/: complaint.sh  emotion.sh
src/docs/contributing/: code.md  code_en.md
tests/api_tests/: API_DOCS.md  FASTAPI_SUCCESS_REPORT.md  test_api.py  test_fixmspatint.py
tests/integration_tests/: test_load_config.py
tests/unit_tests/: test_backbone_config.py  test_cli_journey.py  test_cli_utils.py  test_initialize.py  test_load_config_utils.py  test_memory_chunking.py  test_memory_store.py  test_model_services.py  test_skills.py
