[tool.poetry]
name = "anna_agent"
version = "0.1.0"
description = "Dynamic Evolution Agent System with Multi-Session Memory for Realistic Seeker Simulation"
authors = []
readme = "README.md"
packages = [{ include = "anna_agent", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
openai = "*"
pandas = "*"
typer = {extras = ["all"], version = "*"}
environs = "*"
pydantic = "*"
python-dotenv = "*"
PyYAML = "*"

[tool.poetry.scripts]
anna-agent = "anna_agent.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
