[project]
name = "anna-agent"
version = "0.1.2"
description = "Dynamic Evolution Agent System with Multi-Session Memory for Realistic Seeker Simulation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai",
    "pandas",
    "lancedb>=0.25.3,<0.26",
    "huggingface-hub",
    "rich",
    "typer",
    "environs",
    "pydantic",
    "python-dotenv",
    "PyYAML",
]

[project.scripts]
anna = "anna_agent.cli:app"
anna-agent = "anna_agent.cli:app"

[dependency-groups]
test = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "freezegun>=1.2.2",
    "pytest-mock>=3.10.0",
    "syrupy>=4.0.2",
    "pytest-watcher>=0.3.4",
    "pytest-asyncio>=0.21.1",
    "grandalf>=0.8",
    "pytest-profiling>=1.7.0",
    "responses>=0.25.0",
]
lint = [
    "ruff>=0.1.5",
]
codespell = [
    "codespell>=2.2.0",
]
dev = [
    "jupyter>=1.0.0",
    "setuptools>=67.6.1",
]

[tool.ruff]
exclude = [
    "tests/examples/non-utf8-encoding.py",
    "tests/integration_tests/examples/non-utf8-encoding.py",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "T201", # print
]

[tool.mypy]
ignore_missing_imports = "True"
disallow_untyped_defs = "True"
exclude = ["notebooks", "examples", "example_data"]

[tool.coverage.run]
omit = [
    "tests/*",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
anna_agent = [
    "datasets/*.csv",
    "figure/*.md",
    "figure/*.png",
    "scales/*.json",
    "server/*.sh",
]

[tool.pytest.ini_options]
# --strict-markers will raise errors on unknown marks.
# https://docs.pytest.org/en/7.1.x/how-to/mark.html#raising-errors-on-unknown-marks
#
# https://docs.pytest.org/en/7.1.x/reference/reference.html
# --strict-config       any warnings encountered while parsing the `pytest`
#                       section of the configuration file raise errors.
#
# https://github.com/tophat/syrupy
# --snapshot-warn-unused    Prints a warning on unused snapshots rather than fail the test suite.
addopts = "--strict-markers --strict-config --durations=5 -svv"
# Registering custom markers.
# https://docs.pytest.org/en/7.1.x/example/markers.html#registering-markers
markers = [
    "requires: mark tests as requiring a specific library",
    "scheduled: mark tests to run in scheduled testing",
    "compile: mark placeholder test used to compile integration tests without running them"
]
# asyncio_mode = "auto"


[tool.codespell]
skip = '.git,*.pdf,*.svg,*.pdf,*.yaml,*.ipynb,uv.lock,*.min.js,*.css,package-lock.json,example_data,_dist,examples,*.trig,*.json,*.md,*.html,*.txt,*.csv'
# Ignore latin etc
ignore-regex = '.*(Stati Uniti|Tense=Pres).*'
# whats is a typo but used frequently in queries so kept as is
# aapply - async apply
# unsecure - typo but part of API, decided to not bother for now
ignore-words-list = 'momento,collison,ned,foor,reworkd,parth,whats,aapply,mysogyny,unsecure,damon,crate,aadd,symbl,precesses,accademia,nin'
